kubernetes/clinica-api-deployment.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "clinica-api-deployment"
  namespace: "default"
  labels:
    api: "clinica-api-deployment"
spec:
  replicas: 3
  selector:
    matchLabels:
      api: "clinica-api-deployment"
  template:
    metadata:
      labels:
        api: "clinica-api-deployment"
    spec:
      containers:
      - name: "clinicaapi-1"
        image: "gcr.io/clinica-410018/github.com/bi-dall/clinicaapi"
