kubernetes/clinica-api-deployment-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
  creationTimestamp: "2024-01-05T07:39:34Z"
  finalizers:
  - service.kubernetes.io/load-balancer-cleanup
  labels:
    app: clinica-api-deployment
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:app: {}
      f:spec:
        f:allocateLoadBalancerNodePorts: {}
        f:externalTrafficPolicy: {}
        f:internalTrafficPolicy: {}
        f:ports:
          .: {}
          k:{"port":80,"protocol":"TCP"}:
            .: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: GoogleCloudConsole
    operation: Update
    time: "2024-01-05T07:39:34Z"
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:finalizers:
          .: {}
          v:"service.kubernetes.io/load-balancer-cleanup": {}
      f:status:
        f:loadBalancer:
          f:ingress: {}
    manager: cloud-controller-manager
    operation: Update
    subresource: status
    time: "2024-01-05T07:40:07Z"
  name: clinica-api-deployment-service
  namespace: default
  resourceVersion: "2445463"
  uid: a2ab508f-49d3-4fcb-af40-a37a03357413
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 34.118.238.66
  clusterIPs:
  - 34.118.238.66
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 32175
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: clinica-api-deployment
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 34.170.22.205
