kubernetes/clinica-api-ports.yaml
apiVersion: v1
kind: Service
metadata:
  name: clinica-api-svc
spec:
  selector:
    app: clinica-api
  ports:
    - port: 3000
      targetPort: 80
      name: http
    - port: 443
      targetPort: 3000
      name: https
